refactor the train path into navigation stages